Upload and Files button implemented

--- a/genaiprojnew/webapp/index.html
+++ b/genaiprojnew/webapp/index.html
@@ -10,6 +10,9 @@
             height: 100%;
         }
     </style>
+     lib/pdf.min.js</script>
+     lib/pdf.worker.min.js</script>
+
     <script
         id="sap-ui-bootstrap"
         src="resources/sap-ui-core.js"
